--- a/styling.css
+++ b/styling.css
@@ -1,1 +1,16 @@
-h1{color:white; background: black; text-align:center;font-family: 'Alumni Sans Inline One', cursive;
+body {
+    background-color: #f7f7f7;
+    font-family: Arial, sans-serif;
+    color: #333;
+    text-align: center;
+    margin-top: 50px;
+}
+
+h1 {
+    color: #0066cc;
+}
+
+p {
+    font-size: 18px;
+    color: #444;
+}
